--- a/style.css
+++ b/style.css
@@ -70,6 +70,7 @@ main {
   display: flex;
   flex: 1;
   width: 100%;
+  cursor: pointer;
 }
 
 .color {
@@ -83,4 +84,26 @@ footer {
   display: flex;
   justify-content: space-around;
   align-items: center;
+  cursor: pointer;
+}
+
+/* COPY */
+.copied-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  background-color: rgba(0, 0, 0, 0.8);
+  color: white;
+  padding: 6px 10px;
+  border-radius: 5px;
+  font-size: 12px;
+  opacity: 0;
+  transform: scale(0.8);
+  transition: opacity 0.3s ease, transform 0.3s ease;
+  pointer-events: none;
+}
+
+.show {
+  opacity: 1;
+  transform: scale(1);
 }
